# rust-production-test

./: .env  Cargo.toml  README.md  config.json
auth/: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  settings.rs
cli/src/api/: mod.rs  v1.rs
cli/src/api/handlers/: jwt.rs  login.rs
cli/src/api/middleware/: json.rs  jwt.rs
cli/src/api/response/: dogs.rs  login.rs
cli/src/commands/: createadmin.rs  hello.rs  mod.rs  serve.rs
entity/: Cargo.toml
