[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arc-swap = "1.7.1"
axum = "0.7.5"
clap = "4"
config = "0.14.0"
dotenv = "0.15"
sea-orm = { version = "0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
migration = { path = "../migration" }
